DBZ-5857 Migrated MongoDB integration tests to test-containers